# render-lab

./: .clang-format  CMakeLists.txt  README.md  camera.h  color.h  cube.h  frame.h  helloworld.cpp  hittable.h  hittable_list.h  image.cpp  image.out  interval.h  main.cpp  material.h  mesh.h  objects.h  project.h  ray.h  render.cpp  render.h  render_point.h  render_rec.h  rtweekend.h  screen.h  sdl_render.h  sphere.h  spheres.h  vec.h  vec3.h  vect.h  vector3.h  vertex.h
rtweekend/: color.h  hittable.h  hittable_list.h  material.h  rtweekend.h  sphere.h
src/: main.cpp  mesh.h  sdl.h  sdl_render.h  triangle.hpp
src/renderer/: ndebug.h  vulkan.cpp  vulkan.h  vulkan_config.cpp  vulkan_config.hpp  vulkan_init.cpp  vulkan_init.hpp  vulkan_resource.cpp  vulkan_resource.hpp
src/shaders/: shader.slang
src/shapes/: triangle.cpp  triangle.hpp  vulkan.cpp  vulkan.h
src/window/: window.cpp  window.h
